--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "goit-js-hw-08",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Chan0129.github.io/goit-js-hw-08",
+  "homepage": "https://chan0129.github.io/goit-js-hw-08",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Chan0129/goit-js-hw-08.git"
+    "url": "git+https://github.com/chan0129/goit-js-hw-08.git"
   },
   "keywords": [],
   "author": "Christian <delima0129@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Chan0129/goit-js-hw-08/issues"
+    "url": "https://github.com/chan0129/goit-js-hw-08/issues"
   },
   "dependencies": {
     "@vimeo/player": "^2.21.0",
